// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a field with a error collection 1`] = `
<div
  class="field error"
>
  <label
    class="label"
  >
    label1
  </label>
  <input
    type="text"
  />
  <label
    class="errorLabel"
  >
    sulu_admin.error_minitems
  </label>
</div>
`;

exports[`Render a field with an error 1`] = `
<div
  class="field error"
>
  <label
    class="label"
  >
    label1
  </label>
  <input
    type="text"
  />
  <label
    class="errorLabel"
  >
    sulu_admin.error_minlength
  </label>
</div>
`;

exports[`Render a field without a label 1`] = `
<div
  class="field"
>
  <input
    type="text"
  />
  <label
    class="errorLabel"
  />
</div>
`;

exports[`Render a required field with correct field type 1`] = `
<div
  class="field"
>
  <label
    class="label"
  >
    label1 *
  </label>
  <input
    type="text"
  />
  <label
    class="errorLabel"
  />
</div>
`;

exports[`Render correct label with correct field type 1`] = `
<div
  class="field"
>
  <label
    class="label"
  >
    label1
  </label>
  <input
    type="text"
  />
  <label
    class="errorLabel"
  />
</div>
`;

exports[`Render correct label with correct field type 2`] = `
<div
  class="field"
>
  <label
    class="label"
  >
    label2
  </label>
  <input
    type="date"
  />
  <label
    class="errorLabel"
  />
</div>
`;
